--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -17,8 +17,9 @@ body {
 .heading-secondary {
     color: $color-quaternary;
     display: block;
-    font-size: 2rem;
+    font-size: $default-font-size * 1.1;
     font-weight: 400;
     letter-spacing: 0.15rem;
     margin-top: 2rem;
+    margin-bottom: 2rem;
 }
