--- a/src/styles/components/_carousel.scss
+++ b/src/styles/components/_carousel.scss
@@ -5,7 +5,7 @@
 
 .carousel-no-results-header {
   margin-left: 2rem;
-  font-size: 1.8rem;
+  font-size: $default-font-size;
   color: $color-grey;
 }
 
@@ -60,7 +60,7 @@
 .slick-prev:before,
 .slick-next:before
 {
-  font-size: 20px;
+  font-size: $default-font-size;
   line-height: 1;
 
   opacity: .75;
@@ -156,7 +156,7 @@
 }
 .slick-dots li button:before
 {
-  font-size: 6px;
+  font-size: $default-font-size / 2;
   line-height: 20px;
 
   position: absolute;
