--- a/src/styles/components/_search.scss
+++ b/src/styles/components/_search.scss
@@ -16,7 +16,7 @@
   background-color: transparent;
   border: none;
   height: 6rem;
-  font-size: 2rem;
+  font-size: $default-font-size * 1.1;
   color: $color-grey;
   margin-left: 2rem;
   &:focus {
@@ -34,15 +34,17 @@
 
 .search-result__item {
   height: 6rem;
-  font-size: 1.8rem;
+  font-size: $default-font-size;
   margin-left: 4rem;
   margin-right: 4rem;
   display: flex;
   align-items: center;
+  cursor: pointer;
   &:not(:last-child) {
     border-bottom: 0.2rem solid $color-grey;
   }
   &--active {
+    cursor: pointer;
     display: flex;
     align-items: center;
     border-bottom: 0.1rem solid white;
@@ -50,7 +52,7 @@
     color: $color-secondary;
     margin-left: 4rem;
     margin-right: 4rem;
-    font-size: 1.8rem;
+    font-size: $default-font-size;
     &:not(:last-child) {
       border-bottom: 0.2rem solid $color-grey;
     }
@@ -66,11 +68,11 @@
 
 .search-result__header {
   margin-left: 2rem;
-  font-size: 1.8rem;
+  font-size: $default-font-size;
 }
 
 .search-button {
-  font-size: 2rem;
+  font-size: $default-font-size * 1.1;
   color: $color-grey;
   text-transform: uppercase;
   text-decoration: none;
