--- a/src/styles/components/_table.scss
+++ b/src/styles/components/_table.scss
@@ -38,7 +38,7 @@
     justify-content: center;
     align-items: center;
     color: $color-white;
-    font-size: 1.5rem;
+    font-size: $default-font-size;
     flex: 0.1;
 
   }
@@ -52,6 +52,6 @@
     align-items: center;
     flex: 0.3;
     color: $color-white;
-    font-size: 1.5rem;
+    font-size: $default-font-size;
   }
 }
